# rust-single

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh
.cargo/: config.toml
src/: core.rs  ipc.rs  lib.rs  mac.rs  unix.rs  windows.rs
