[package]
name = "rust-single"
version = "25.8.4"
authors = ["lingting"]
homepage = "https://github.com/lingting-projects/rust-single"
repository = "https://github.com/lingting-projects/rust-single"
categories = ["command-line-utilities"]
license = "MIT"
edition = "2024"
rust-version = "1.88.0"
description = "rust application single process"
readme = "README.md"

[features]
ipc = ["interprocess"]

[dependencies]
log = "0.4"
thiserror = "2.0"
fs2 = "0.4"
interprocess = { version = "2.2", optional = true }